raphael: overlay: Enable display burn-in-protection in Ambient Display
Change-Id: I3351fa93259b3e4a23b9331ebecc3b0c2c1f9e93
Signed-off-by: UtsavisGreat <utsavbalar1231@gmail.com>
Signed-off-by: Akhil Narang <me@akhilnarang.dev>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -399,5 +399,9 @@
     <!-- True if the display hardware only has brightness buckets rather than a full range of
          backlight values -->
     <bool name="config_displayBrightnessBucketsInDoze">true</bool>
+
+    <!-- If true, the display will be shifted around in ambient mode. -->
+    <bool name="config_enableBurnInProtection">true</bool>
+
 </resources>
 
