raphael: overlay: Increase no. of visible max notifications icons
Signed-off-by: Nauval Rizky <enuma.alrizky@gmail.com>

--- a/overlay-derpfest/frameworks/base/core/res/res/values/aosip_config.xml
+++ b/overlay-derpfest/frameworks/base/core/res/res/values/aosip_config.xml
@@ -22,4 +22,8 @@
     <!-- Shows the required view for in-display fingerprint -->
     <bool name="config_needCustomFODView">true</bool>
 
+    <!-- Max visible notification icons -->
+    <integer name="config_maxVisibleNotificationIcons">5</integer>
+    <integer name="config_maxVisibleNotificationIconsWhenDark">6</integer>
+
 </resources>
