--- a/parts/res/layout/switch_bar.xml
+++ b/parts/res/layout/switch_bar.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright (C) 2016 The Android Open Source Project
-
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-
           http://www.apache.org/licenses/LICENSE-2.0
-
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -30,13 +27,12 @@
         android:layout_weight="1"
         android:layout_gravity="center_vertical"
         android:paddingStart="56dp"
-        android:maxLines="2"
         android:ellipsize="end"
-        android:textAppearance="@android:style/TextAppearance.Material.Title"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        android:textAlignment="viewStart" />
-
+        android:maxLines="2"
+        android:textAlignment="viewStart"
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
+        android:textColor="@android:color/white" />
+ 
     <Switch
         android:id="@android:id/switch_widget"
         android:layout_width="wrap_content"
