raphael: Update MAC randomization overlay
Change-Id: Ib33d6f965019b5fbbaac9f0ee931f89addfc704d
Signed-off-by: Joey Huab <joey@evolution-x.org>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -320,5 +320,8 @@
 
     <!-- Specifies the maximum burn-in offset vertically. -->
     <integer name="config_burnInProtectionMaxVerticalOffset">40</integer>
+
+    <!-- Indicates that connected MAC randomization is supported on this device -->
+    <bool translatable="false" name="config_wifi_connected_mac_randomization_supported">true</bool>
 </resources>
 
