--- a/overlay-aosip/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-aosip/frameworks/base/core/res/res/values/config.xml
@@ -73,4 +73,8 @@
 
     <!-- Should we filter any display modes which are unampped? -->
     <bool name="config_filterDisplayModes">true</bool>
+
+    <!-- Max visible notification icons -->
+    <integer name="config_maxVisibleNotificationIcons">7</integer>
+    <integer name="config_maxVisibleNotificationIconsWhenDark">8</integer>
 </resources>
