--- a/parts/res/xml/dirac_settings.xml
+++ b/parts/res/xml/dirac_settings.xml
@@ -39,6 +39,7 @@
         <SwitchPreference
             android:key="dirac_hifi_pref"
             android:defaultValue="false"
+            android:icon="@drawable/ic_hifi"
             android:title="@string/dirac_hifi_enable_title"
             android:summary="@string/dirac_hifi_summary"/>
 
