overlay: Enable screen fade off
Signed-off-by: Alex <badnwz.ad@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -554,5 +554,8 @@
         <item>264</item>
         <item>265</item>
     </integer-array>
+
+    <!-- If this is true, the screen will fade off. -->
+    <bool name="config_animateScreenLights">true</bool>
 </resources>
 
