--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -651,6 +651,11 @@
     <bool name="config_animateScreenLights">false</bool>
 	
     <!-- Enable pocket mode -->
-    <bool name="config_proxiSensorWakupCheck">true</bool> 
+    <bool name="config_proxiSensorWakupCheck">true</bool>
+	
+    <!-- Amount of time it takes for the light sensor to warm up in milliseconds.
+         For this time after the screen turns on, the Power Manager
+         will not debounce light sensor readings -->
+    <integer name="config_lightSensorWarmupTime">200</integer>
 </resources>
 
