--- a/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -16,11 +16,9 @@
 */
 -->
 <resources>
-    <dimen name="system_icons_keyguard_padding_end">4dp</dimen>
-
     <!-- for 16dp of padding at 2.75px/dp at default density -->
     <dimen name="rounded_corner_content_padding">44px</dimen>
-    <dimen name="status_bar_extra_padding">11dp</dimen>
+    <dimen name="status_bar_extra_padding">14dp</dimen>
 
     <!-- the padding on the top of the statusbar (usually 0) -->
     <dimen name="status_bar_padding_top">1dp</dimen>
@@ -34,4 +32,8 @@
     <dimen name="multi_user_switch_keyguard_margin">22px</dimen>
 
     <dimen name="keyguard_carrier_text_margin">44px</dimen>
+    
+    <!-- Height of the battery icon in the status bar. -->
+    <dimen name="status_bar_battery_icon_height">12.5dp</dimen>
+    
 </resources>
